Update lab2.html add name Mr.tawan landa

--- a/lab2.html
+++ b/lab2.html
@@ -2,5 +2,6 @@
 <body>
 <h1>Lab2<2/h1>
 <p>Owner File is Mr.Suchat Marayat Number 5721423106</p>
+<p>Edited by Mr.tawan landa Number 5721423103 </p>
 </body>
 </html>
